Bug#13707 - Server crash with INSERT DELAYED on MyISAM table Initialized 'ptr' for a newly instantiated varstring field. This is required by INSERT DELAYED.

No test case. This is a migration issue. There are two shell
scripts attached to the bug report. They can be used for testing.